@@ -1,3 +1,8 @@
+2009-08-10 10:02-EDT Gregory John Casamento <greg.casamento@gmail.com>
+
+	* GormCore/GormDefines.h: Move defines for certain things here
+	so that they are centralized.
+
 2009-08-08 03:09-EDT Gregory John Casamento <greg.casamento@gmail.com>
 
 	* GormCore/GNUmakefile: Added reference to new classes.
